--- a/it_lives.jade
+++ b/it_lives.jade
@@ -1,5 +1,6 @@
 extends _layout
-body #home
+block vars
+  - var bodyClass = 'home';
 block hero 
       img(src='assets/images/brand_box_home.png', alt='It"s not in the budget', height='497', width='983')
   block content
