--- a/judges.jade
+++ b/judges.jade
@@ -1,5 +1,6 @@
 extends _layout
-
+block vars
+  - var bodyClass = 'judges';
 block hero
       img(src='assets/images/brand_box_judges.png', alt='It"s not in the budget', height='497', width='983')
     block content
