--- a/rules_and_undeadlines.jade
+++ b/rules_and_undeadlines.jade
@@ -1,5 +1,6 @@
 extends _layout
-
+block vars
+  - var bodyClass = 'rules';
 block hero
   img(src='assets/images/brand_box_rules.png', alt='It"s not in the budget', height='497', width='983')
 
