fixed backgroung image

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -1,7 +1,7 @@
 @import "compass";
 
 body {
-  background: url('../images/bg.png') repeat-x;
+  background: #000 url('../images/bg.png') repeat-x;
   margin: 0;
   padding: 0;
 }
