--- a/_layout.jade
+++ b/_layout.jade
@@ -1,6 +1,7 @@
-doctype 5
+doctype 5 html.no-js
 html(lang='en')
   head
+    script(src='assets/javascript/modernizr.custom.12492.js')
     link(rel='stylesheet', type='text/css', href='assets/stylesheets/base.css')
 - var bodyClass = '';
 block vars
