--- a/event.jade
+++ b/event.jade
@@ -2,7 +2,7 @@ extends _layout
 block vars
   - var bodyClass = 'event';
 block hero
-      img(src='assets/images/brand_box_event.png', alt='It"s not in the budget', height='497', width='983')
+      img(src='assets/images/brand_box_event.png', height='497', width='983')
     block content
     .map
       iframe(width='399', height='391', frameborder='0', scrolling='no', marginheight='0', marginwidth='0', src='https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=19+S+22nd+St,+Philadelphia,+PA&aq=0&oq=19&sll=41.117935,-77.604698&sspn=8.844675,10.469971&ie=UTF8&hq=&hnear=19+S+22nd+St,+Philadelphia,+Pennsylvania+19103&t=m&ll=39.953175,-75.176611&spn=0.025726,0.034332&z=14&output=embed')smalla(href='https://maps.google.                                                                      com/maps?f=q&source=embed&hl=en&geocode=&q=19+S+22nd+St,+Philadelphia,+PA&aq=0&oq=19&sll=41.117935,-77.604698&sspn=8.844675,10.469971&ie=UTF8&hq=&hnear=19+S+22nd+St,+Philadelphia,+Pennsylvania+19103&t=m&ll=39.953175,-75.176611&spn=0.025726,0.034332&z=14')
