--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -5,6 +5,7 @@ body {
   background: #000 url('../images/bg.png') repeat-x;
   margin: 0;
   padding: 0;
+  font-family: serif;
 }
 
 #container {
@@ -24,6 +25,7 @@ body {
 
 #content {
 	text-align: left;
+  @include legacy-pie-clearfix;
 }
 
 nav {
@@ -67,6 +69,11 @@ p, h2, {
 
 span {
 	color: #fd8329;
+}
+
+.leftContent {
+  float: left;
+  width: 300px;
 }
 
 footer {
