--- a/it_lives.jade
+++ b/it_lives.jade
@@ -8,7 +8,7 @@ block hero
       a(href='https://www.facebook.com/events/393347694064886', target='_self')
         img(src='assets/images/facebook.png', alt='Facebook', height='471', width='283', style='float: right;')
         img(src='assets/images/bar_big.png', height='575', width='9', style='float: right;')
-    .leftContent
+    .homeContent
       h1 Your client thought they killed it.
          br
          | But for one night... it lives.
