layout for home and event in ie7/8 fairly consistent

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -80,11 +80,12 @@ span {
 .eventContent {
   float: left;
   width: auto;
+  padding-left: 25px;
 }
 
 .homeContent {
   float: left;
-  width: 625px;
+  width: 680px;
 }
 
 footer {
