--- a/judges.jade
+++ b/judges.jade
@@ -4,6 +4,7 @@ block vars
 block hero
       img(src='assets/images/brand_box_judges.png', height='497', width='983')
     block content
+    br
     h1 Judges
     p
       | Your dead work&apos;s not technically dead. It's just waiting for judgment day. Which will arrive October 4th, 2013.
@@ -11,6 +12,6 @@ block hero
       br
       | Your work will be judged by some of the industry's top creative minds &mdash; folks who know how to spot an idea that died prematurely. 
       br
-      | We're basically looking for the most unjustly killed thinking @mdash; work that makes us jealous and inspired.
+      | We're basically looking for the most unjustly killed thinking &mdash; work that makes us jealous and inspired.
     #keynote
         img(src='assets/images/keynote.png', alt='keynote')
