--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -80,7 +80,8 @@ span {
 
 .homeContent {
   float: left;
-  width: 661px;
+  width: auto;
+  position: absolute;
 }
 
 footer {
@@ -90,12 +91,13 @@ footer {
   	bottom:15px;
   	width: 100%;
   	padding: 20px 0;
-  	margin-top: 38px;
+  	margin-top: 25px;
     text-align: left;
     #copyright {
       color: white;
       margin: 0px;
       float: left;
+      padding-top: 5px;
     }
 
     #a {
@@ -105,12 +107,12 @@ footer {
     }
 
     #adcp {
-      padding-bottom: 0px;
+      padding-top: 7px;
     }
 }
 
 #keynote {
-  padding-top: 45px;
+  padding-top: 33px;
   padding-bottom: 100px;
   float: left;
 }
