--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -51,6 +51,8 @@ body#winners a#winnersCurrent {
 }
 
 h1 {
+  font-family: 'Smythe';
+  font-weight: lighter;
 	color: #a9a841;
   margin: 0;
 }
@@ -62,6 +64,7 @@ h2 {
 p, h2, {
 	color: white;
   width: auto;
+  font-size: 16px;
 }
 
 span {
