--- a/_layout.jade
+++ b/_layout.jade
@@ -5,6 +5,7 @@ html(lang='en')
     script(src='assets/javascript/modernizr.custom.12492.js')
     link(rel='stylesheet', type='text/css', href='assets/stylesheets/base.css')
     link(href='http://fonts.googleapis.com/css?family=Smythe', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=EB+Garamond', rel='stylesheet', type='text/css')
 - var bodyClass = '';
 block vars
 body(id='#{bodyClass}')
