--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -5,7 +5,6 @@ body {
   background: #000 url('../images/bg.png') repeat-x;
   margin: 0;
   padding: 0;
-  font-family: serif;
 }
 
 #container {
@@ -26,6 +25,8 @@ body {
 nav {
 	text-align: center;
 	padding-bottom: 5px;
+  font-family: 'EB Garamond', serif;
+  letter-spacing: 3px;
 	a {
     display: inline-block;
     min-width: 91px;
@@ -51,8 +52,8 @@ body#winners a#winnersCurrent {
 }
 
 h1 {
-  font-family: 'Smythe';
-  font-weight: lighter;
+  font-family: 'Smythe', cursive;
+  letter-spacing: 3px;
 	color: #a9a841;
   margin: 0;
 }
@@ -65,6 +66,8 @@ p, h2, {
 	color: white;
   width: auto;
   font-size: 16px;
+  font-family: 'EB Garamond', serif;
+  word-spacing: 2px;
 }
 
 span {
