removed bottom padding from home block hero

--- a/it_lives.jade
+++ b/it_lives.jade
@@ -2,7 +2,7 @@ extends _layout
 block vars
   - var bodyClass = 'home';
 block hero 
-      img(src='assets/images/brand_box_home.png', height='573', width='983', style='margin-top: -34px;')
+      img(src='assets/images/brand_box_home.png', height='573', width='983', style='margin-top: -34px; padding-bottom: 0px')
   block content
     .facebook
       a(href='https://www.facebook.com/events/393347694064886', target='_self')
