--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -52,7 +52,7 @@ body#winners a#winnersCurrent {
 }
 
 h1 {
-  font-family: 'Smythe', cursive;
+  font-family: 'Smythe';
   letter-spacing: 1px;
   font-size: 29px;
 	color: #a9a841;
