added padding to p class rules, fixing spacing issue in event

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -73,6 +73,10 @@ p, h2, {
   padding-left: 15px;
 }
 
+.rules {
+  padding-bottom: 32px;
+}
+
 span {
 	color: #fd8329;
 }
@@ -100,7 +104,6 @@ footer {
   	bottom:15px;
   	width: 100%;
   	padding: 20px 0;
-  	margin-top: 25px;
     text-align: left;
     font-family: 'Garamond', serif;
     word-spacing: 2px;
