--- a/rules_and_undeadlines.jade
+++ b/rules_and_undeadlines.jade
@@ -26,7 +26,7 @@ block content
     br
     | Work must have shaken off the mortal coil some time between October 12, 2012 and October 12, 2013.
   h2 Undeadlines and Entry Fee
-  p
+  p.rules
     | Award submissions open
     span  9.12.13. 
     br
