changed font size in nav menu

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -32,7 +32,8 @@ nav {
     min-width: 91px;
 		color: #FCFCFC;
 		text-decoration: none;
-		padding: 16px 20px 31px 2px
+		padding: 16px 20px 31px 2px;
+    font-size: 15px;
 	}
 }
 
