finished styling for it_lives

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -145,6 +145,7 @@ footer {
   padding-right:7px;
   float: right;
   border: 0px;
+  padding-bottom: 8px;
 }
 
 .map {
@@ -160,8 +161,7 @@ footer {
 }
 
 .submit {
-  margin-bottom: 132px;
-  padding-top: 34px;
+  padding: 20px 0 0 15px;
   img {
     box-shadow: 0px 0px 20px #808080;
     border-radius: 20px;
